--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://techagentng.github.io/upload-api-frontend",
-  "name": "zojapay",
+  "name": "routepay",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
