--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://techagentng.github.io/upload-api-frontend",
+  "homepage": "./",
   "name": "routepay",
   "version": "0.1.0",
   "private": true,
