--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.5",
     "axios": "^0.26.1",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.11.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.0",
